--- a/css/index.css
+++ b/css/index.css
@@ -1,52 +1,128 @@
 @charset "utf-8";
-body{
+
+body {
     margin: 0;
     border: 0;
     padding: 0;
     background-color: #E9FAFF;
 }
 
-.container-{
-    margin-top: 60px;
-    margin-left:0px;
-    margin-right: 0;
-    padding: 0;
+.bgshadow{
+    box-shadow: 0 4px 10px rgba(0, 0, 0, .05);
+}
+.header {
+    height: 60px;
     width: 100%;
+    background-color: #8edcb84d;
+    display: flex;
 }
 
-li{
-    list-style: none
+.container1 {
+    margin: 0 auto;
+    width: 80%;
+    position: relative;
+    display: flex;
 }
-a{
+
+.navbar {
+    width: 70%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    height: 60px;
+}
+
+.navbar1 {
+    width: 30%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    height: 60px;
+
+}
+
+
+.navbar-nav {
+    padding: 0 5px;
+    height: 60px;
+    display: flex;
+    width: 60%;
+    margin: 0;
+    margin-left: 0;
+}
+
+
+
+
+li {
+    margin-left: 0;
+    list-style: none;
+    width: 60px;
+    margin-left:0px ;
+    margin-right:auto ;
+    margin-top: auto;
+    margin-bottom: auto;
+
+}
+
+a {
     text-decoration: none;
+    color: #000;
 }
-.header{
-    height: 80px;
-    width: 100%;
-}
-.navbar{
-    background-color: #8edcb84d;
-    width: 100%;
-    margin: auto;
+
+
+.search-box {
+    height: 60px;
     display: flex;
-    height: 80px;
-}
-.navbar-nav{
-   
-    padding: 0 10px;
-    height: 80px;
-    display: flex;
-    width: 40%;
-    margin: auto;
-}
-.navbar-nav > li{
-    margin: auto;
-}
-.card >img{
     width: 50%;
 }
 
+.login {
+    height: 60px;
+    width: 50%;
+    margin: auto;
+    display: flex;
+}
 
+.login>button {
+    margin: auto 0 auto auto;;
+    height: 40px;
+    padding: 0px 25px;
+    
+}
+
+
+.container2{
+    width: 80%;
+    margin: 30px auto;
+    background-color: #888;
+    display: flex;
+}
+
+.left{
+    background-color: #E9FAFF;
+    margin: 0 auto;
+}
+.left {
+    width: 20%;
+}
+.right{
+ width: 20%;
+}
+.center {
+    width: 60%;
+}
+.card{
+    margin: 0 auto;
+    align-items: center;
+}
+.card > img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 0 auto;
+}
 @media (min-width:600px) {
     /* nav {
       float: left;
@@ -55,111 +131,130 @@ a{
     /* section {
       margin-left: 25%;
     } */
-  }
+}
+
 @media (max-width:599px) {
     /* nav li {
       display: inline;
     } */
-  }
+}
 
-  /* CSS Document */
-  
-  /* 宽屏输入字段 */
-  input[type=text], input[type=password] {
-      width: 100%;
-      padding: 12px 20px;
-      margin: 8px 0;
-      display: inline-block;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-      border-radius: 30px;
-  }
-  
-  /* 为所有按钮设置样式  */
-  button {
-      background-color: #4CAF50;
-      color: white;
-      padding: 14px 20px;
-      margin: 8px 0;
-      border: none;
-      cursor: pointer;
-      width: 100%;
-      border-radius: 15px;
-  }
-  
-  /* 取消按钮的其他样式 */
-  .cancelbtn {
-      padding: 14px 20px;
-      background-color: #f44336;
-  }
-  
-  /* 浮动取消和注册按钮，并添加一个相同的宽度 */
-  .cancelbtn,.signupbtn {float:left;width:50%}
-  
-  /* 向容器元素添加填充 */
-  .container {
-      padding: 16px;
-  }
-  
-  /* 注册弹框模型 */
-  .modal {
-      display: none; /* 在默认情况下隐藏 */
-      position: fixed; /* 生成绝对定位的元素，相对于浏览器窗口进行定位。 */
-      /* z-index、left、top共同控制模型在所有内容的上方 */
-      z-index: 1;
-      left: 0;
-      top: 0;
-      width: 100%; /* Full width */
-      height: 100%; /* Full height */
-      overflow: auto; /* 如果需要，启用滚动条 */
-        background-color: rgb(0,0,0); /* 回退颜色 */
-      background-color: rgba(0,0,0,0.4); /* 黑色 */
-      padding-top: 60px;
-  }
-  
-  /* 模型内容 */
-  .modal-content {
-      background-color: #fefefe;
-      margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-      border: 1px solid #888;
-      width: 50%; /* Could be more or less, depending on screen size */
-  }
-  
-  /* 定位关闭按钮 */
-  .close {
-      position: absolute;
-      right: 35px;
-      top: 15px;
-      color: #000;
-      font-size: 40px;
-      font-weight: bold;
-  }
-  
-  /* 光标移动到关闭按钮 */
-  .close:hover,
-  .close:focus {
-      color: red;
-      /*光标呈现为指示链接的指针（一只手）*/
-      cursor: pointer;
-  }
-  
-  /* 设置浮动*/
-  .clearfix::after {
-      content: "";
-      clear: both;
-      display: table; /*此元素会作为块级表格来显示（类似 <table>），表格前后带有换行符。*/
-  }
-  
-  /* 添加缩放动画 */
-  .animate {
-  
-      -webkit-animation: animatezoom 0.6s; /*兼容-webkit-引擎浏览器*/
-      -moz-animation: animatezoom 0.6s; /*兼容-moz-引擎浏览器*/
-      -o-animation: animatezoom 0.6s; /*兼容-o-引擎浏览器*/
-      animation: animatezoom 0.6s
-  }
-  
-  /*
+/* CSS Document */
+
+/* 宽屏输入字段 */
+input[type=text],
+input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    border-radius: 30px;
+}
+
+/* 为所有按钮设置样式  */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 15px;
+}
+
+/* 取消按钮的其他样式 */
+.cancelbtn {
+    padding: 14px 20px;
+    background-color: #f44336;
+}
+
+/* 浮动取消和注册按钮，并添加一个相同的宽度 */
+.cancelbtn,
+.signupbtn {
+    float: left;
+    width: 50%
+}
+
+/* 向容器元素添加填充 */
+.container {
+    padding: 16px;
+}
+
+/* 注册弹框模型 */
+.modal {
+    display: none;
+    /* 在默认情况下隐藏 */
+    position: fixed;
+    /* 生成绝对定位的元素，相对于浏览器窗口进行定位。 */
+    /* z-index、left、top共同控制模型在所有内容的上方 */
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* 如果需要，启用滚动条 */
+    background-color: rgb(0, 0, 0);
+    /* 回退颜色 */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* 黑色 */
+    padding-top: 60px;
+}
+
+/* 模型内容 */
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto;
+    /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 50%;
+    /* Could be more or less, depending on screen size */
+}
+
+/* 定位关闭按钮 */
+.close {
+    position: absolute;
+    right: 35px;
+    top: 15px;
+    color: #000;
+    font-size: 40px;
+    font-weight: bold;
+}
+
+/* 光标移动到关闭按钮 */
+.close:hover,
+.close:focus {
+    color: red;
+    /*光标呈现为指示链接的指针（一只手）*/
+    cursor: pointer;
+}
+
+/* 设置浮动*/
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+    /*此元素会作为块级表格来显示（类似 <table>），表格前后带有换行符。*/
+}
+
+/* 添加缩放动画 */
+.animate {
+
+    -webkit-animation: animatezoom 0.6s;
+    /*兼容-webkit-引擎浏览器*/
+    -moz-animation: animatezoom 0.6s;
+    /*兼容-moz-引擎浏览器*/
+    -o-animation: animatezoom 0.6s;
+    /*兼容-o-引擎浏览器*/
+    animation: animatezoom 0.6s
+}
+
+/*
   1. transform:scale(x,y)
   x表示元素沿着水平方向（X轴）缩放的倍数，y表示元素沿着垂直方向（Y轴）缩放的倍数。
   注意，Y是一个可选参数，如果没有设置Y值，则表示X、Y两个方向的缩放倍数是一样的（同时放大相同倍数）。
@@ -167,39 +262,62 @@ a{
   2. 关键词 "from" 和 "to"，等同于 0% 和 100%。
   0% 是动画的开始，100% 是动画的完成。
   */
-  
-  /*创建动画animatezoom,把它绑定到 animate 选择器*/
-  @keyframes animatezoom {
-      from {transform: scale(0)}
-      to {transform: scale(1)}
-  }
-  
-  /* 设置动画兼容-webkit-引擎浏览器 Firefox */
-  @-webkit-keyframes animatezoom {
-      from {transform: scale(0)}
-      to {transform: scale(1)}
-  }
-  
-  /*设置动画兼容-moz-引擎浏览器 Safari and Chrome*/
-  @-moz-keyframes animatezoom {
-      from {transform: scale(0)}
-      to {transform: scale(1)}
-  }
-  
-  /*设置动画兼容-o-引擎浏览器 Opera*/
-  @-o-keyframes animatezoom {
-      from {transform: scale(0)}
-      to {transform: scale(1)}
-  }
-  
-  /*
+
+/*创建动画animatezoom,把它绑定到 animate 选择器*/
+@keyframes animatezoom {
+    from {
+        transform: scale(0)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+/* 设置动画兼容-webkit-引擎浏览器 Firefox */
+@-webkit-keyframes animatezoom {
+    from {
+        transform: scale(0)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+/*设置动画兼容-moz-引擎浏览器 Safari and Chrome*/
+@-moz-keyframes animatezoom {
+    from {
+        transform: scale(0)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+/*设置动画兼容-o-引擎浏览器 Opera*/
+@-o-keyframes animatezoom {
+    from {
+        transform: scale(0)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+/*
   @media 可以针对不同的屏幕尺寸设置不同的样式，特别是如果你需要设置设计响应式的页面，@media 是非常有用的。
   这里，如果文档宽度小于 300 像素则操作修改，在额外的小屏幕上更改取消和注册按钮的样式 */
-  @media screen and (max-width: 300px) {
-      .cancelbtn, .signupbtn {
-         width: 100%;
-      }
-  }
-  #captcha-btn{
-      margin: 0;
-  }
+@media screen and (max-width: 300px) {
+
+    .cancelbtn,
+    .signupbtn {
+        width: 100%;
+    }
+}
+
+#captcha-btn {
+    margin: 0;
+}
