--- a/css/index.css
+++ b/css/index.css
@@ -6,12 +6,19 @@ body {
     padding: 0;
     background-color: #E9FAFF;
 }
-
-.bgshadow {
-    box-shadow:4px 5px 5px 6px rgba(0, 0, 0, .05)
-
+button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 15px;
 }
-
+.bgshadow {
+    box-shadow: 4px 5px 5px 6px rgba(0, 0, 0, .05)
+}
+a:hover{
+    color: #338eea;
+}
 .bg-br {
     border-radius: 20px;
 }
@@ -23,7 +30,7 @@ body {
     display: flex;
     position: sticky;
     top: 0;
-    z-index: 999;
+    z-index: 1;
 }
 
 .container1 {
@@ -68,9 +75,6 @@ body {
     margin-left: 0;
 }
 
-
-
-
 li {
     margin-left: 0;
     list-style: none;
@@ -87,7 +91,6 @@ a {
     color: #000;
 }
 
-
 .search-box {
     height: 60px;
     display: flex;
@@ -96,7 +99,7 @@ a {
 
 .login {
     height: 60px;
-    /* margin: auto; */
+    
     width: 200px;
     display: flex;
 }
@@ -106,7 +109,6 @@ a {
     height: 40px;
     padding: 0px 25px;
 }
-
 
 .container2 {
     width: 70%;
@@ -135,7 +137,7 @@ a {
 .layui-panel>blockquote {
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    
     flex-direction: column;
     height: 50px;
     margin: 0 0 0 0px;
@@ -149,7 +151,7 @@ a {
 }
 
 .margin-left_20 {
-    margin:  0 20px;
+    margin: 0 20px;
 
 }
 
@@ -165,8 +167,6 @@ a {
     margin-left: 20px;
 
 }
-
-
 
 .card {
     margin: 30px auto;
@@ -198,6 +198,114 @@ a {
 }
 
 
+
+.box {
+    position: fixed;
+    display: none;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding-top: 150px;
+}
+
+.close {
+    position: absolute;
+    right: 160px;
+    top: 100px;
+    color: #000;
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+.box_container {
+    border-radius: 20px;
+    margin: 0 30%;
+    
+    
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 0;
+    border-radius: 20px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.box_input {
+    display: flex;
+    margin: 5% 15%;
+    flex-direction: column;
+    height: 100%;
+}
+
+
+input[type=text],
+input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 15px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    border-radius: 30px;
+}
+
+.bt-login {
+    background-color: #25d2cc;
+    color: white;
+    padding: 12px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 30px;
+}
+
+.other {
+    display: flex;
+    margin: 30px 0;
+    justify-content: space-between
+}
+.other1{
+    display: flex;
+    margin: 15px 0;
+    flex-direction: column;
+}
+.clearfix{
+    margin: 15px 0 0 0;
+    display: flex;
+}
+.clearfix>button {
+    padding: 14px 20px;
+    margin: 8px 5px;
+    border: none;
+    cursor: pointer;
+    width: 50%;
+    border-radius: 30px;
+}
+.animate {
+
+    -webkit-animation: animatezoom 0.6s;
+    
+    -moz-animation: animatezoom 0.6s;
+    
+    -o-animation: animatezoom 0.6s;
+    
+    animation: animatezoom 0.6s
+}
 @media screen and (max-width: 1400px) {
     .img {
         height: 40px;
@@ -221,7 +329,7 @@ a {
         display: flex;
         position: sticky;
         top: 0;
-        z-index: 999;
+        z-index: 1;
     }
 
     .container1 {
@@ -297,7 +405,7 @@ a {
 
     .login {
         height: 40px;
-        /* margin: auto; */
+        
         display: flex;
         min-width: 100px;
 
@@ -309,6 +417,7 @@ a {
         font-size: 12px;
         background-color: rgb(38, 182, 231);
     }
+
     .container2 {
         margin: 30px auto;
         width: 80%;
@@ -317,141 +426,123 @@ a {
         flex-direction: column;
     }
 
-}
-/* 宽屏输入字段 */
-input[type=text],
-input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    border-radius: 30px;
-}
-
-/* 为所有按钮设置样式  */
-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    border-radius: 15px;
-}
-
-/* 取消按钮的其他样式 */
-.cancelbtn {
-    padding: 14px 20px;
-    background-color: #f44336;
-}
-
-/* 浮动取消和注册按钮，并添加一个相同的宽度 */
-.cancelbtn,
-.signupbtn {
-    float: left;
-    width: 50%
-}
-
-/* 向容器元素添加填充 */
-.container {
-    padding: 16px;
-}
-
-/* 注册弹框模型 */
-.modal {
-    display: none;
-    /* 在默认情况下隐藏 */
-    position: fixed;
-    /* 生成绝对定位的元素，相对于浏览器窗口进行定位。 */
-    /* z-index、left、top共同控制模型在所有内容的上方 */
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* 如果需要，启用滚动条 */
-    background-color: rgb(0, 0, 0);
-    /* 回退颜色 */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* 黑色 */
-    padding-top: 60px;
-}
-
-/* 模型内容 */
-.modal-content {
-    background-color: #fefefe;
-    margin: 5% auto 15% auto;
-    /* 5% from the top, 15% from the bottom and centered */
-    border: 1px solid #888;
-    width: 50%;
-    /* Could be more or less, depending on screen size */
-}
-
-/* 定位关闭按钮 */
-.close {
-    position: absolute;
-    right: 35px;
-    top: 15px;
-    color: #000;
-    font-size: 40px;
-    font-weight: bold;
-}
-
-/* 光标移动到关闭按钮 */
-.close:hover,
-.close:focus {
-    color: red;
-    /*光标呈现为指示链接的指针（一只手）*/
-    cursor: pointer;
-}
-
-/* 设置浮动*/
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-    /*此元素会作为块级表格来显示（类似 <table>），表格前后带有换行符。*/
-}
-
-/* 添加缩放动画 */
-.animate {
-
-    -webkit-animation: animatezoom 0.6s;
-    /*兼容-webkit-引擎浏览器*/
-    -moz-animation: animatezoom 0.6s;
-    /*兼容-moz-引擎浏览器*/
-    -o-animation: animatezoom 0.6s;
-    /*兼容-o-引擎浏览器*/
-    animation: animatezoom 0.6s
-}
-
-/*
-  1. transform:scale(x,y)
-  x表示元素沿着水平方向（X轴）缩放的倍数，y表示元素沿着垂直方向（Y轴）缩放的倍数。
-  注意，Y是一个可选参数，如果没有设置Y值，则表示X、Y两个方向的缩放倍数是一样的（同时放大相同倍数）。
+    .box {
+        position: fixed;
+        display: none;
+        z-index: 2;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.4);
+        padding-top: 150px;
+    }
+    
+    .close {
+        position: absolute;
+        right: 60px;
+        top: 80px;
+        color: #000;
+        font-size: 40px;
+        font-weight: bold;
+    }
+    
+    .close:hover,
+    .close:focus {
+        color: red;
+        cursor: pointer;
+    }
+    
+    .box_container {
+        border-radius: 20px;
+        margin: 0 10%;
+        
+        
+    }
+    
+    .modal-content {
+        background-color: #fefefe;
+        margin: 0;
+        border-radius: 20px;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .box_input {
+        display: flex;
+        margin: 5% 15%;
+        flex-direction: column;
+        height: 100%;
+    }
+    
+    
+    input[type=text],
+    input[type=password] {
+        width: 100%;
+        padding: 10px 20px;
+        margin: 7px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+        border-radius: 30px;
+    }
   
-  2. 关键词 "from" 和 "to"，等同于 0% 和 100%。
-  0% 是动画的开始，100% 是动画的完成。
-  */
+    .bt-login {
+        background-color: #25d2cc;
+        color: white;
+        padding: 9px 20px;
+        margin: 7px 0;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        border-radius: 30px;
+    }
+    
+    .other {
+        display: flex;
+        margin: 30px 0;
+        justify-content: space-between
+    }
+    .other1{
+        display: flex;
+        margin: 15px 0;
+        flex-direction: column;
+    }
+    .clearfix{
+        margin: 15px 0 0 0;
+        display: flex;
+    }
+    .clearfix>button {
+        padding: 14px 20px;
+        margin: 8px 5px;
+        border: none;
+        cursor: pointer;
+        width: 50%;
+        border-radius: 30px;
+    }
+    .btn{
+        margin: 7px 0;
+        border: none;
+        padding: 0px 20px;
+        cursor: pointer;
+    }
+    .btn_input{
+        width: 60%;
+    }
+}
 
-/*创建动画animatezoom,把它绑定到 animate 选择器*/
 @keyframes animatezoom {
     from {
         transform: scale(0)
     }
-
     to {
         transform: scale(1)
     }
 }
 
-/* 设置动画兼容-webkit-引擎浏览器 Firefox */
 @-webkit-keyframes animatezoom {
     from {
         transform: scale(0)
@@ -462,7 +553,6 @@ button {
     }
 }
 
-/*设置动画兼容-moz-引擎浏览器 Safari and Chrome*/
 @-moz-keyframes animatezoom {
     from {
         transform: scale(0)
@@ -473,7 +563,6 @@ button {
     }
 }
 
-/*设置动画兼容-o-引擎浏览器 Opera*/
 @-o-keyframes animatezoom {
     from {
         transform: scale(0)
@@ -484,9 +573,7 @@ button {
     }
 }
 
-/*
-  @media 可以针对不同的屏幕尺寸设置不同的样式，特别是如果你需要设置设计响应式的页面，@media 是非常有用的。
-  这里，如果文档宽度小于 300 像素则操作修改，在额外的小屏幕上更改取消和注册按钮的样式 */
+
 @media screen and (max-width: 300px) {
 
     .cancelbtn,
@@ -495,9 +582,6 @@ button {
     }
 }
 
-#captcha-btn {
-    margin: 0;
-}
 
 @keyframes rotate {
     from {
