--- a/css/index.css
+++ b/css/index.css
@@ -306,6 +306,78 @@ input[type=password] {
     
     animation: animatezoom 0.6s
 }
+
+.upload{
+    margin: 0;
+    height: 800px;
+    width: 100%;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 80%;
+}
+.upload_area{
+    width: 50%;
+    background-color: #fefefe;
+    margin: 50px auto;
+    border-radius: 30px;
+    height: 400px;
+    display: flex;
+    text-align: center;
+    /* font-size: 60px; */
+    color: #00daf2;
+    cursor: pointer;
+    flex-direction: column;
+}
+.upload_area>label{
+    height: 100%;
+    width: 100%;
+    margin-top:100px;
+}
+.svgup{
+    margin: 0 auto;
+    width: 10em;
+    height: 10em;
+}
+.p1{
+    font-size: 25px;
+}
+.upload_area>input{
+    opacity: 0;
+    outline: none;
+    height: 0;
+}
+.detail{
+    display: grid;
+    /* align-content: space-around;
+    justify-content: center;
+    justify-items: center;
+    align-items: center; */
+    grid-template-columns: repeat(2, 1fr); /* 2列等宽 */
+    grid-gap: 10px; /* 网格间隙 */
+}
+.item2{
+   grid-column: 1 / span 2;
+   display: flex;
+   flex-direction: column;
+      
+}
+.clearfix1{
+    margin: 30px auto;
+    width: 50%;
+    display: flex;
+    justify-content: space-between
+}
+.clearfix1>button {
+    padding: 14px 20px;
+    margin: 8px 5px;
+    border: none;
+    cursor: pointer;
+    width: 20%;
+    border-radius: 30px;
+}
 @media screen and (max-width: 1400px) {
     .img {
         height: 40px;
