--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@ body {
     padding: 0;
     background-color: #E9FAFF;
 }
+
 button {
     background-color: #4CAF50;
     color: white;
@@ -13,12 +14,15 @@ button {
     cursor: pointer;
     border-radius: 15px;
 }
+
 .bgshadow {
     box-shadow: 4px 5px 5px 6px rgba(0, 0, 0, .05)
 }
-a:hover{
+
+a:hover {
     color: #338eea;
 }
+
 .bg-br {
     border-radius: 20px;
 }
@@ -99,7 +103,7 @@ a {
 
 .login {
     height: 60px;
-    
+
     width: 200px;
     display: flex;
 }
@@ -137,7 +141,7 @@ a {
 .layui-panel>blockquote {
     display: flex;
     justify-content: center;
-    
+
     flex-direction: column;
     height: 50px;
     margin: 0 0 0 0px;
@@ -230,8 +234,8 @@ a {
 .box_container {
     border-radius: 20px;
     margin: 0 30%;
-    
-    
+
+
 }
 
 .modal-content {
@@ -279,15 +283,18 @@ input[type=password] {
     margin: 30px 0;
     justify-content: space-between
 }
-.other1{
+
+.other1 {
     display: flex;
     margin: 15px 0;
     flex-direction: column;
 }
-.clearfix{
+
+.clearfix {
     margin: 15px 0 0 0;
     display: flex;
 }
+
 .clearfix>button {
     padding: 14px 20px;
     margin: 8px 5px;
@@ -296,29 +303,32 @@ input[type=password] {
     width: 50%;
     border-radius: 30px;
 }
+
 .animate {
 
     -webkit-animation: animatezoom 0.6s;
-    
+
     -moz-animation: animatezoom 0.6s;
-    
+
     -o-animation: animatezoom 0.6s;
-    
+
     animation: animatezoom 0.6s
 }
 
-.upload{
+.upload {
     margin: 0;
     height: 800px;
     width: 100%;
 }
-.container{
+
+.container {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
     width: 80%;
 }
-.upload_area{
+
+.upload_area {
     width: 50%;
     background-color: #fefefe;
     margin: 50px auto;
@@ -331,45 +341,55 @@ input[type=password] {
     cursor: pointer;
     flex-direction: column;
 }
-.upload_area>label{
+
+.upload_area>label {
     height: 100%;
     width: 100%;
-    margin-top:100px;
+    margin-top: 100px;
 }
-.svgup{
+
+.svgup {
     margin: 0 auto;
     width: 10em;
     height: 10em;
 }
-.p1{
+
+.p1 {
     font-size: 25px;
 }
-.upload_area>input{
+
+.upload_area>input {
     opacity: 0;
     outline: none;
     height: 0;
 }
-.detail{
+
+.detail {
     display: grid;
     /* align-content: space-around;
     justify-content: center;
     justify-items: center;
     align-items: center; */
-    grid-template-columns: repeat(2, 1fr); /* 2列等宽 */
-    grid-gap: 10px; /* 网格间隙 */
+    grid-template-columns: repeat(2, 1fr);
+    /* 2列等宽 */
+    grid-gap: 10px;
+    /* 网格间隙 */
 }
-.item2{
-   grid-column: 1 / span 2;
-   display: flex;
-   flex-direction: column;
-      
+
+.item2 {
+    grid-column: 1 / span 2;
+    display: flex;
+    flex-direction: column;
+
 }
-.clearfix1{
+
+.clearfix1 {
     margin: 30px auto;
     width: 50%;
     display: flex;
     justify-content: space-between
 }
+
 .clearfix1>button {
     padding: 14px 20px;
     margin: 8px 5px;
@@ -378,6 +398,7 @@ input[type=password] {
     width: 20%;
     border-radius: 30px;
 }
+
 @media screen and (max-width: 1400px) {
     .img {
         height: 40px;
@@ -477,7 +498,7 @@ input[type=password] {
 
     .login {
         height: 40px;
-        
+
         display: flex;
         min-width: 100px;
 
@@ -510,7 +531,7 @@ input[type=password] {
         background-color: rgba(0, 0, 0, 0.4);
         padding-top: 150px;
     }
-    
+
     .close {
         position: absolute;
         right: 60px;
@@ -519,20 +540,20 @@ input[type=password] {
         font-size: 40px;
         font-weight: bold;
     }
-    
+
     .close:hover,
     .close:focus {
         color: red;
         cursor: pointer;
     }
-    
+
     .box_container {
         border-radius: 20px;
         margin: 0 10%;
-        
-        
+
+
     }
-    
+
     .modal-content {
         background-color: #fefefe;
         margin: 0;
@@ -542,15 +563,15 @@ input[type=password] {
         display: flex;
         flex-direction: column;
     }
-    
+
     .box_input {
         display: flex;
         margin: 5% 15%;
         flex-direction: column;
         height: 100%;
     }
-    
-    
+
+
     input[type=text],
     input[type=password] {
         width: 100%;
@@ -561,7 +582,7 @@ input[type=password] {
         box-sizing: border-box;
         border-radius: 30px;
     }
-  
+
     .bt-login {
         background-color: #25d2cc;
         color: white;
@@ -572,21 +593,24 @@ input[type=password] {
         width: 100%;
         border-radius: 30px;
     }
-    
+
     .other {
         display: flex;
         margin: 30px 0;
         justify-content: space-between
     }
-    .other1{
+
+    .other1 {
         display: flex;
         margin: 15px 0;
         flex-direction: column;
     }
-    .clearfix{
+
+    .clearfix {
         margin: 15px 0 0 0;
         display: flex;
     }
+
     .clearfix>button {
         padding: 14px 20px;
         margin: 8px 5px;
@@ -595,14 +619,93 @@ input[type=password] {
         width: 50%;
         border-radius: 30px;
     }
-    .btn{
+
+    .btn {
         margin: 7px 0;
         border: none;
         padding: 0px 20px;
         cursor: pointer;
     }
-    .btn_input{
+
+    .btn_input {
         width: 60%;
+    }
+
+    .upload {
+        margin: 0;
+        height: 800px;
+        width: 100%;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        width: 80%;
+    }
+
+    .upload_area {
+        width: 100%;
+        background-color: #fefefe;
+        margin: 50px auto;
+        border-radius: 30px;
+        height: 400px;
+        display: flex;
+        text-align: center;
+        color: #00daf2;
+        cursor: pointer;
+        flex-direction: column;
+    }
+
+    .upload_area>label {
+        height: 100%;
+        width: 100%;
+        margin-top: 100px;
+    }
+
+    .svgup {
+        margin: 0 auto;
+        width: 10em;
+        height: 10em;
+    }
+
+    .p1 {
+        font-size: 25px;
+    }
+
+    .upload_area>input {
+        opacity: 0;
+        outline: none;
+        height: 0;
+    }
+
+    .detail {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 10px;
+    }
+
+    .item2 {
+        grid-column: 1 / span 2;
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .clearfix1 {
+        margin: 30px auto;
+        width: 50%;
+        display: flex;
+        justify-content: space-between
+    }
+
+    .clearfix1>button {
+        padding: 14px 20px;
+        margin: 8px 5px;
+        border: none;
+        cursor: pointer;
+        width: 60%;
+        border-radius: 30px;
     }
 }
 
@@ -610,6 +713,7 @@ input[type=password] {
     from {
         transform: scale(0)
     }
+
     to {
         transform: scale(1)
     }
