--- a/css/index.css
+++ b/css/index.css
@@ -398,7 +398,22 @@ input[type=password] {
     width: 20%;
     border-radius: 30px;
 }
+.btnss {
+    margin:  0;
+    border: none;
+    padding: 0px 10px;
+    cursor: pointer;
+}
 
+.btn_input {
+    width: 20%;
+    height: 40px;
+}
+
+#captcha-btn {
+    height: 40px;
+    font-size:11px;
+}
 @media screen and (max-width: 1400px) {
     .img {
         height: 40px;
@@ -620,15 +635,23 @@ input[type=password] {
         border-radius: 30px;
     }
 
-    .btn {
-        margin: 7px 0;
+    .btnss {
+        margin:  0;
         border: none;
         padding: 0px 20px;
         cursor: pointer;
     }
 
     .btn_input {
-        width: 60%;
+        /* width: 60%; */
+        width: 100%;
+        height: 40px;
+    }
+
+    #captcha-btn {
+        height: 40px;
+        /* margin: 8px 0; */
+        font-size: 6px;
     }
 
     .upload {
